<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:id="@+id/login_fragment_ll_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_fragment_til_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/MyEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_fragment_til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/MyEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/login_fragment_checkbox_rem"
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/remember" />

            <TextView
                android:id="@+id/forgetPasswordTV"
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_forget" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/et_rectangle"
            android:padding="@dimen/_20sdp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_20sdp"
            android:text="@string/Login"
            android:textAllCaps="false" />
    </LinearLayout>

    <TextView
        android:id="@+id/frag_login_create_accountTV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@color/colorGray"
        android:padding="@dimen/_10sdp"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"

        />

</RelativeLayout>
