<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/login_bg"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_validation_til_code"
        android:textColorHint="@color/colorAccent"
        android:hint="@string/Verification">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        style="@style/MyEditTextStyle"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_validation_til_password"
        android:textColorHint="@color/colorAccent"
        android:hint="@string/password">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        style="@style/MyEditTextStyle"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_validation_til_retype_password"
        android:textColorHint="@color/colorAccent"
        android:hint="@string/re_password">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        style="@style/MyEditTextStyle"
        />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/fragment_validation_change_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/et_rectangle"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="center"
        android:text="Change"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>