<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/request_donation_fragment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/request_donation_fragment_toolbar"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/donation_request"
            android:textColor="#fff"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/request_donation_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/request_donation_fragment_til_name"
                style="@style/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/MyEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/request_donation_fragment_til_age"
                style="@style/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/MyEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/request_donation_fragment_til_blood_type"
                style="@style/MyEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance">

                <Spinner
                    android:id="@+id/request_donation_fragment_sp_blood_type"
                    style="@style/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="@dimen/_1sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/request_donation_fragment_til_hospital_name"
                style="@style/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/MyEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hospital_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/request_donation_fragment_til_number"
                style="@style/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/MyEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/request_donation_fragment_til_hos_loc"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_input"
                    app:errorTextAppearance="@style/error_appearance">
                    <LinearLayout
                        style="@style/MyEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/request_donation_fragment_et_hos_loc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:hint="@string/hos_loc"
                        android:textColorHint="@color/colorAccent"
                        android:textSize="@dimen/_15ssp" />
                    <ImageButton
                        android:id="@+id/request_donation_fragment_ib_map"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:src="@drawable/ic_add_location_black_24dp" />
            </LinearLayout>
                </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/request_donation_fragment_til_choose_government"
                style="@style/MyEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance">

                <Spinner
                    android:id="@+id/request_donation_fragment_sp_choose_government"
                    style="@style/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_1sdp"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/request_donation_fragment_til_choose_city"
                style="@style/MyEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance">

                <Spinner
                    android:id="@+id/request_donation_fragment_sp_choose_city"
                    style="@style/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_1sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/request_donation_fragment_til_phone"
                style="@style/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/MyEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/request_donation_fragment_til_note"
                style="@style/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note"
                app:errorTextAppearance="@style/error_appearance">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/MyEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="4"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/fragment_register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/et_rectangle"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/colorGray" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
